<resources>
    <string name="app_name">SampleApplication</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="waiting">Setting up Databases Please Wait</string>
    <string name="enter_plate">Enter Plate</string>
    <string name="intro">Enter a Plate from the Read Me to Test</string>
    <string name="repeat">Repeat Offenders</string>
    <string name="permit">Permit Search</string>
    <string name="plate">Plate Info</string>
    <string name="nothingFoundVios">No Warnings or Citations found</string>
    <string name="no_plate_info_found">No Plate Information Found</string>
    <string name="plate_info_found">Plate Information Found</string>
    <string name="nothing_found">No information found</string>
    <string name="permit_tital">Permit Found</string>
    <string name="no_permit_found">No Permit Found</string>
    <string name="title_activity_voice_record">VoiceRecordActivity</string>
    <string name="recording_ready">Ready To Record</string>
    <string name="recording_in_progress">Recording in progress</string>
    <string name="recording_complete">Recording Complete</string>
    <string name="plates_list">List of Plates</string>
    <string name="record">Voice Record</string>
    <string name="search">Database Search</string>
    <string name="title_activity_search_database">SearchDatabaseActivity</string>
    <string name="title_activity_recording">RecordingActivity</string>
    <string name="start_recording">Create Recording</string>
</resources>
