<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    >
    <!--android:visibility="gone"-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/boarder"
        android:padding="5dp"
        android:text="@string/intro"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/plate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/boarder"
        android:hint="@string/enter_plate"/>

    <Button
        android:id="@+id/btnRepeatOffenders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/repeat"
        />

    <Button
        android:id="@+id/btnPermitSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/permit"/>

    <Button
        android:id="@+id/btnPlateInfoSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/plate"/>

    <Button
        android:id="@+id/btnAssist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/plates_list"/>
</LinearLayout>